# ClaudeQuest

./: .env.example  .gitignore  CLAUDE.md  PRODUCT.md  README.md  docker-compose.yml  wrangler.jsonc
backend/: Dockerfile  README.md  alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 022bc49e02e8_create_certificates_and_user_.py  45f32686bc53_create_tracks_modules_levels_lessons_.py  9e36691b8c7f_create_xp_ledger_table.py  a4f2c8d92b31_create_user_lesson_progress_table.py  ac57cacc72cc_create_events_table.py  b8f0ad4e3588_create_badges_and_user_badges_tables.py  c1628290d899_create_password_reset_tokens_table.py  db7d6bfc33de_initial_sqlite_schema.py  dc18282faa13_create_user_leagues_table.py  e8a1f4c2b9d0_create_daily_weekly_missions.py  ee2a5f909eb1_create_organizations_users_and_sessions_.py  f1b2c3d4e5f6_add_schools_to_learning.py  f3a9c1d6e7b2_create_achievements_and_user_achievements.py
backend/app/: main.py
backend/app/api/v1/: health.py  router.py
backend/app/core/: config.py  logging.py  security.py
backend/app/database/: base.py  registry.py  session.py
backend/app/domains/admin/: __init__.py  repository.py  router.py  (+2 more)
backend/app/middlewares/: error_handler.py  request_context.py
backend/app/shared/: errors.py  response.py  schemas.py
backend/scripts/: seed_achievements.py  seed_badges.py  seed_certificates.py  seed_demo_data.py  seed_learning_content.py
backend/tests/: conftest.py  test_config.py  test_database_base.py  test_error_handlers.py  test_health.py  test_security.py  test_session.py
(+166 files in other folders)
